--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coupon-styles",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "private": true,
   "description": "Generate coupon style coding",
   "license": "MIT",
@@ -11,13 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vitejs/plugin-vue-jsx": "^1.3.9",
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.0",
+    "@types/node": "^17.0.30",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "path": "^0.12.7",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "vue-tsc": "^0.29.8"
+    "vite": "^2.9.5",
+    "vue-tsc": "^0.34.7"
   }
 }
