--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
@@ -29,7 +29,7 @@ jobs:
         env:
           CI: true
 
-      - name: Deploy 🚀
+      - name: Build 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
