--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "description": "Generate coupon style coding",
   "license": "MIT",
-  "author": "Di-got<https://github.com/WuChenDi>",
+  "author": "wudi",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "lint:code": "eslint ./src/**/*.{vue,ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{vue,ts,tsx} --fix"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.30",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@cdlab996/eslint-config-vue": "^0.0.4",
+    "@cdlab996/prettier-config": "^0.0.4",
+    "@types/node": "^20.4.7",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "path": "^0.12.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.5"
   }
 }
