--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/node": "^20.4.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "eslint": "^8.46.0",
     "path": "^0.12.7",
+    "prettier": "^3.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
