--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "coupon-styles",
-  "version": "2.0.0",
   "type": "module",
+  "version": "2.1.0",
   "private": true,
   "description": "Generate coupon style coding",
-  "license": "MIT",
   "author": "wudi",
+  "license": "MIT",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "typecheck": "nuxt typecheck",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.9.0",
-    "@cdlab996/prettier-config": "^0.0.5",
-    "@unocss/nuxt": "^0.58.6",
-    "eslint": "^8.57.0",
-    "nuxt": "^3.11.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-tsc": "^1"
+    "@antfu/eslint-config": "^2.15.0",
+    "@cdlab996/prettier-config": "^0.0.6-beta.4",
+    "@unocss/nuxt": "^0.59.4",
+    "eslint": "^9.0.0",
+    "nuxt": "^3.11.2",
+    "vue": "^3.4.23",
+    "vue-router": "^4.3.2",
+    "vue-tsc": "^2.0.13"
   }
 }
